tests/verify/pass/simple-assert.rs
extern crate prusti_contracts;

fn main() {
    let x = 100;
    let y = 200;
    assert!(x + y > 0);
}
